<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gwu_cs6221_paradigm_hechh.syncwatcher.CreateActivity"
    android:background="#a0e0ff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_label_new"
        android:id="@+id/textLabelNew"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_username"
        android:id="@+id/textUserNew"
        android:textSize="25sp"
        android:layout_below="@+id/textLabelNew"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_password"
        android:id="@+id/textPassNew"
        android:textSize="25sp"
        android:layout_below="@+id/textLabelNew"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_label_retype"
        android:id="@+id/textRetypeNew"
        android:textSize="25sp"
        android:layout_below="@+id/textLabelNew"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editUserNew"
        android:inputType="text"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textUserNew"
        android:layout_marginLeft="25dp"
        android:layout_alignBottom="@+id/textUserNew"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editPassNew"
        android:inputType="textPassword"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textPassNew"
        android:layout_marginLeft="25dp"
        android:layout_alignBottom="@+id/textPassNew"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editRetypeNew"
        android:inputType="textPassword"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textRetypeNew"
        android:layout_marginLeft="25dp"
        android:layout_alignBottom="@+id/textRetypeNew"
        android:layout_marginRight="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_button_create"
        android:id="@+id/buttonCreate"
        android:textSize="25sp"
        android:onClick="clickCreate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/roundedblue"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_button_back"
        android:id="@+id/buttonBack"
        android:textSize="25sp"
        android:onClick="clickBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/roundedblue"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_label_info"
        android:id="@+id/textInfo"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp" />

</RelativeLayout>
