<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gwu_cs6221_paradigm_hechh.syncwatcher.RoomListActivity"
    android:background="#a0e0ff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_welcome"
        android:id="@+id/textWelcome"
        android:textSize="25sp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_logout"
        android:id="@+id/buttonLogout"
        android:textSize="20sp"
        android:onClick="clickLogout"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:background="@drawable/roundedblue"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_button_refresh"
        android:id="@+id/buttonRefresh"
        android:textSize="20sp"
        android:onClick="clickRefresh"
        android:layout_below="@+id/buttonLogout"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:background="@drawable/roundedblue"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_room_new"
        android:id="@+id/buttonNewRoom"
        android:textSize="20sp"
        android:onClick="clickNewRoom"
        android:layout_below="@+id/buttonLogout"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:background="@drawable/roundedblue"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_click_room"
        android:id="@+id/textClickInfo"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonRefresh"
        android:layout_marginTop="5dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textClickInfo"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:layout_above="@+id/textInfo"
        android:layout_marginBottom="5dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <TableLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listRooms" />

        </HorizontalScrollView>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_room_notice"
        android:id="@+id/textInfo"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp" />

</RelativeLayout>
